# mortgagepy

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TESTING.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
examples/: mortgagepy.ipynb
mortgagepy/: __init__.py  exceptions.py  mortgagepy.py
scripts/: increment_version.sh
src/mortgagepy/: __init__.py  calculator.py  compare.py  exceptions.py  mortgage.py  utils.py
tests/: test_calculator.py  test_compare.py  test_mortgage.py  test_mortgagepy.py  test_utils.py
