[tool.poetry]
name = "mortgagepy"
version = "0.1.0"
description = "A python module for mortgage calculations."
authors = ["Charlie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
tox = "^4.11.4"
black = "^23.12.1"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
