[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgagepy"
dynamic = ["version"]
description = "A python library to calculate mortgage payments"
readme = "README.md"
authors = [{ name = "Charlie" }]
license = { file = "LICENSE" }
classifiers = [
    "Licence :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["mortgage"]
dependencies = ["python-dateutil>=2.9.0.post0", "rich>=13.9.4"]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "tox>=4.23.0",
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff]
exclude = ["*.ipynb"]
indent-width = 4
line-length = 79

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = [
    "D1",  # docstring
    "E",   # pycodestyle
    "ERA", # commented out code
    "I",   # isort
    "W",   # pycodestyle
    "ANN", # missing type annotation
]
ignore = [
    "ANN101", # missing type annotation for self
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools_scm]
